classDiagram
    class VisionManager {
        -Dict~VisionProviderType,VisionProvider~ _providers
        -VisionProviderType _current_provider_type
        -VisionProvider _current_provider
        -MimoVisionProvider _mimo_vision_provider
        +set_provider(provider: str) void
        +current_provider_name: str %% property
        +current_provider_description: str %% property
        +recognize_text(image_path: str) Optional~str~
        +understand(image_path: str, prompt: str) Optional~str~
        +get_available_providers() List~Dict~
        +current_provider: Optional~VisionProvider~ %% property [NEW]
        +has_provider: bool %% property [NEW]
        +get_provider(provider_type: VisionProviderType) Optional~VisionProvider~ %% [NEW]
    }

    class OCRWorker {
        +finished: Signal~str~
        +error: Signal~str~
        +run() void
    }

    class VisionWorker {
        +result_ready: Signal~str~
        +error_occurred: Signal~str~
        +run() void
    }

    class StreamChatWorker {
        +chunk_received: Signal~str~
        +sentence_ready: Signal~str~
        +finished_stream: Signal~dict~
        +error: Signal~str~
        +tool_call_status: Signal~str~
        -_stop_requested: bool
        -_mutex: QMutex
        -_retry_count: int %% [NEW]
        +run() void
        +stop_stream() void
        +is_stop_requested() bool
    }

    class SplashDebugWindow {
        -_progress_label: QLabel
        -_skip_btn: QPushButton
        -_skip_timer_started: bool
        +set_progress(text: str) void %% [MERGED]
        -_center_on_screen() void
        -_show_skip_button() void
        +append_log(text: str) void
    }

    OCRWorker --> VisionManager : 使用公开接口
    VisionWorker --> VisionManager : 使用公开接口
